--- a/src/app/drafts/matchup-overview/matchup/coveragechart/coveragechart.component.scss
+++ b/src/app/drafts/matchup-overview/matchup/coveragechart/coveragechart.component.scss
@@ -10,5 +10,5 @@
 
 coverage {
   border: 1px solid var(--pdz-color-primary-border);
-  border-radius: 1rem;
+  border-radius: var(--pdz-shape-corner-lg);
 }
