--- a/src/app/drafts/matchup-overview/matchup/speedchart/speedtier/speedtier.component.scss
+++ b/src/app/drafts/matchup-overview/matchup/speedchart/speedtier/speedtier.component.scss
@@ -27,7 +27,7 @@
       font-size: 0.7em;
       border: 1px solid var(--pdz-color-secondary);
       color: var(--pdz-color-secondary);
-      border-radius: 1rem;
+      border-radius: var(--pdz-shape-corner-lg);
       user-select: none;
     }
   }
