--- a/src/app/league-zone/league-landing/landing.component.scss
+++ b/src/app/league-zone/league-landing/landing.component.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   background-color: var(--pdz-color-primary-container);
   color: var(--pdz-color-on-primary-container);
-  padding: 0.25rem;
+  padding: var(--pdz-space-xs);
   font-size: x-large;
   width: 12rem;
   color: var(--pdz-color-primary);
