--- a/src/app/league-zone/league-rules-overview/league-rules-overview.component.scss
+++ b/src/app/league-zone/league-rules-overview/league-rules-overview.component.scss
@@ -1,5 +1,5 @@
 .rule-container {
-  padding: 1rem;
+  padding: var(--pdz-space-lg);
   display: flex;
   flex-direction: column;
   justify-content: center;
