--- a/src/app/league-zone/league-schedule/league-schedule.component.scss
+++ b/src/app/league-zone/league-schedule/league-schedule.component.scss
@@ -1,5 +1,5 @@
 .matchups-container {
-  padding: 1rem;
+  padding: var(--pdz-space-lg);
   display: flex;
   flex-direction: column;
   width: fit-content;
