--- a/src/app/league-zone/league-sidebar/league-sidebar.component.scss
+++ b/src/app/league-zone/league-sidebar/league-sidebar.component.scss
@@ -1,5 +1,5 @@
 .nav-group {
-  padding: 0.25rem;
+  padding: var(--pdz-space-xs);
   .nav-title {
     font-size: small;
     font-family: var(--pdz-font-fancy);
