--- a/src/app/tools/time_converter/time_converter.component.scss
+++ b/src/app/tools/time_converter/time_converter.component.scss
@@ -8,10 +8,10 @@ $height: 32px;
 }
 
 .time-container {
-  padding: 1rem;
+  padding: var(--pdz-space-lg);
   max-width: 40rem;
   box-shadow: var(--pdz-level-3);
-  border-radius: 0.5rem;
+  border-radius: var(--pdz-shape-corner-sm);
 }
 mat-slider {
   width: 90%;
