--- a/src/app/util/tooltip/tooltip.component.scss
+++ b/src/app/util/tooltip/tooltip.component.scss
@@ -8,7 +8,7 @@
   background: var(--pdz-color-surface);
   color: var(--pdz-color-on-surface);
   padding: 8px;
-  border-radius: 8px;
+  border-radius: var(--pdz-shape-corner-sm);
   font-size: 14px;
   white-space: nowrap;
   z-index: 10;
