--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,10 +1,12 @@
 $spacing: (
-  xxxs: 1px,
-  xxs: 2px,
-  xs: 4px,
-  sm: 8px,
-  md: 16px,
-  lg: 24px,
-  xl: 32px,
-  xxl: 48px,
+  none: 0,
+  xxxs: 0.0675rem,
+  xxs: 0.125rem,
+  xs: 0.25rem,
+  sm: 0.5rem,
+  md: 0.75rem,
+  lg: 1rem,
+  xl: 1.5rem,
+  xxl: 2rem,
+  xxxl: 5rem,
 );
