--- a/src/styles/_shape.scss
+++ b/src/styles/_shape.scss
@@ -1,9 +1,13 @@
 $shape: (
   corner-none: 0,
-  corner-extra-small: 4px,
-  corner-small: 8px,
-  corner-medium: 12px,
-  corner-large: 16px,
-  corner-extra-large: 28px,
-  corner-full: 999px,
+  corner-xxxs: 0.0675rem,
+  corner-xxs: 0.125rem,
+  corner-xs: 0.25rem,
+  corner-sm: 0.5rem,
+  corner-md: 0.75rem,
+  corner-lg: 1rem,
+  corner-xl: 1.5rem,
+  corner-xxl: 2rem,
+  corner-xxxl: 5rem,
+  corner-full: 100rem,
 );
