--- a/src/app/debug/themes/debug-themes.component.scss
+++ b/src/app/debug/themes/debug-themes.component.scss
@@ -4,7 +4,7 @@
   background-color: var(--pdz-color-background);
   color: var(--pdz-color-on-surface);
 
-  padding: 2rem;
+  padding: var(--pdz-space-xxl);
   // transition:
   //   background-color 0.3s ease,
   //   color 0.3s ease;
@@ -53,9 +53,9 @@
   .card {
     background-color: var(--pdz-color-surface);
     border: 1px solid var(--pdz-color-primary-border);
-    border-radius: 8px;
+    border-radius: var(--pdz-shape-corner-sm);
     margin: 1rem 0;
-    padding: 1.5rem;
+    padding: var(--pdz-space-xl);
     // transition:
     //   background-color 0.3s ease,
     //   border-color 0.3s ease;
