--- a/src/app/drafts/draft-overview/draft-stats/draft-stats.component.scss
+++ b/src/app/drafts/draft-overview/draft-stats/draft-stats.component.scss
@@ -15,9 +15,9 @@
 }
 
 .table-wrapper {
-  padding: 1rem;
+  padding: var(--pdz-space-lg);
   overflow-x: auto;
-  border-radius: 1rem;
+  border-radius: var(--pdz-shape-corner-lg);
   background-color: var(--pdz-color-surface);
   box-shadow: var(--pdz-level-3);
 }
@@ -39,7 +39,7 @@ table {
 
 .title-bar {
   position: relative;
-  padding: 1rem;
+  padding: var(--pdz-space-lg);
 }
 
 .back-button {
