--- a/src/app/drafts/matchup-overview/matchup/overview/overview.component.scss
+++ b/src/app/drafts/matchup-overview/matchup/overview/overview.component.scss
@@ -4,9 +4,9 @@
   column-gap: 0.5rem;
   .team-container {
     border-width: 1px;
-    border-radius: 1rem;
+    border-radius: var(--pdz-shape-corner-lg);
     border-color: var(--pdz-color-primary-border);
-    padding: 0.25rem;
+    padding: var(--pdz-space-xs);
     display: flex;
     flex-direction: column;
     align-items: center;
