--- a/src/app/drafts/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.scss
+++ b/src/app/drafts/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.scss
@@ -1,7 +1,7 @@
 .pokemon-form-container {
   background-color: var(--pdz-color-surface);
   color: var(--pdz-color-on-surface);
-  border-radius: 1rem;
+  border-radius: var(--pdz-shape-corner-lg);
   box-shadow: var(--pdz-level-2);
 
   .details-title {
