--- a/src/app/league-zone/league-bracket/league-single-elim-bracket/league-bracket-graph.component.scss
+++ b/src/app/league-zone/league-bracket/league-single-elim-bracket/league-bracket-graph.component.scss
@@ -87,7 +87,7 @@
     display: flex;
     align-items: center;
     column-gap: 0.25rem;
-    border-radius: 0.5rem;
+    border-radius: var(--pdz-shape-corner-sm);
     .team-logo {
       flex-shrink: 0;
       height: 32px;
