--- a/src/app/league-zone/league-new/league-new.component.scss
+++ b/src/app/league-zone/league-new/league-new.component.scss
@@ -19,7 +19,7 @@ mat-form-field {
   padding: 15px;
   margin-bottom: 15px;
   position: relative; // For positioning remove buttons if needed
-  border-radius: 4px;
+  border-radius: var(--pdz-shape-corner-xs);
 }
 
 .rule-point {
