--- a/src/app/league-zone/league-teams/league-teams.component.scss
+++ b/src/app/league-zone/league-teams/league-teams.component.scss
@@ -1,6 +1,6 @@
 .teams-container {
   display: grid;
-  padding: 1rem;
+  padding: var(--pdz-space-lg);
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   gap: 1rem;
@@ -8,6 +8,6 @@
 
 pdz-league-team-card {
   box-shadow: var(--pdz-level2);
-  border-radius: 1rem;
-  padding: 0.5rem;
+  border-radius: var(--pdz-shape-corner-lg);
+  padding: var(--pdz-space-sm);
 }
