--- a/src/app/league-zone/league/upload-image/upload-image.component.scss
+++ b/src/app/league-zone/league/upload-image/upload-image.component.scss
@@ -3,7 +3,7 @@
   margin-top: 20px;
   padding: 15px;
   border: 1px solid #eee;
-  border-radius: 4px;
+  border-radius: var(--pdz-shape-corner-xs);
   background-color: #f9f9f9;
 }
 
@@ -11,7 +11,7 @@
   margin-top: 10px;
   font-weight: bold;
   padding: 8px;
-  border-radius: 4px;
+  border-radius: var(--pdz-shape-corner-xs);
 
   &.error {
     color: #b71c1c; // Darker red
