--- a/src/app/planner/team/team.component.scss
+++ b/src/app/planner/team/team.component.scss
@@ -86,7 +86,7 @@ table {
   box-sizing: border-box;
   max-width: 6rem;
   object-fit: contain;
-  border-radius: 4px;
+  border-radius: var(--pdz-shape-corner-xs);
   box-shadow:
     0 5px 5px -3px rgba(0, 0, 0, 0.2),
     0 8px 10px 1px rgba(0, 0, 0, 0.14),
