--- a/src/app/planner/typechart/typechart.component.scss
+++ b/src/app/planner/typechart/typechart.component.scss
@@ -12,11 +12,11 @@
 }
 
 .table-wrapper {
-  padding: 0.75rem;
+  padding: var(--pdz-space-md);
   min-width: fit-content;
   width: fit-content;
   height: fit-content;
-  border-radius: 1rem;
+  border-radius: var(--pdz-shape-corner-lg);
   background-color: var(--pdz-color-surface);
   box-shadow: var(--pdz-level-3);
 }
