--- a/src/app/tools/quick-draft/quick-draft-final/quick-draft-final.component.scss
+++ b/src/app/tools/quick-draft/quick-draft-final/quick-draft-final.component.scss
@@ -13,7 +13,7 @@
 .draft-container {
   display: flex;
   flex-wrap: wrap;
-  padding: 1rem;
+  padding: var(--pdz-space-lg);
   width: fit-content;
   align-items: center;
   justify-content: center;
